src/test/ui/compile-fail-migration/macro-expansion-tests.stderr
error: cannot find macro `m!` in this scope
  --> $DIR/macro-expansion-tests.rs:17:21
   |
LL |     fn g() -> i32 { m!() }
   |                     ^
   |
   = help: have you added the `#[macro_use]` on the module/import?

error: cannot find macro `m!` in this scope
  --> $DIR/macro-expansion-tests.rs:25:21
   |
LL |     fn g() -> i32 { m!() }
   |                     ^
   |
   = help: have you added the `#[macro_use]` on the module/import?

error: aborting due to 2 previous errors

